[gd_scene load_steps=4 format=3 uid="uid://dtd8er3beknxd"]

[ext_resource type="Script" path="res://run_game.gd" id="1_t4lba"]
[ext_resource type="PackedScene" uid="uid://c43ddrt5tkf1t" path="res://duck_player.tscn" id="4_sucuh"]

[sub_resource type="Curve2D" id="Curve2D_m6jai"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -227, -138, 0, 0, 0, 0, 2525, -129, 0, 0, 0, 0, 2521, 542, 0, 0, 0, 0, 2540, 1429, 0, 0, 0, 0, -261, 1440, 0, 0, 0, 0, -231, -141, 0, 0, 0, 0, -220, -141, 0, 0, 0, 0, -223, -157)
}
point_count = 8

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_t4lba")

[node name="Duck_player" parent="." instance=ExtResource("4_sucuh")]
position = Vector2(-1089, -771)

[node name="Path2D" type="Path2D" parent="Duck_player"]
position = Vector2(8, 82)
scale = Vector2(1.21881, 1.15264)
curve = SubResource("Curve2D_m6jai")

[node name="PathFollow2D" type="PathFollow2D" parent="Duck_player/Path2D"]
unique_name_in_owner = true
position = Vector2(-227, -138)
rotation = 0.00327034

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -10

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = -1070.0
offset_top = -784.0
offset_right = -1009.0
offset_bottom = -729.0
scale = Vector2(90.0743, 74.5068)
color = Color(1, 0.92549, 0.788235, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -429.0
offset_top = -162.0
offset_right = 60.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.533333)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.5
offset_top = -90.5
offset_right = 339.5
offset_bottom = -7.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Game Over"

[node name="Replay" type="Button" parent="GameOver"]
offset_left = 896.0
offset_top = 514.0
offset_right = 996.0
offset_bottom = 554.0
text = "Replay"

[node name="Back_to_Menu" type="Button" parent="GameOver"]
offset_left = 897.0
offset_top = 576.0
offset_right = 997.0
offset_bottom = 616.0
text = "Quit"

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="GameOver/Replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="GameOver/Back_to_Menu" to="." method="_on_back_to_menu_pressed"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
